# MegaBrain

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  package.json
apps/api/: Dockerfile  alembic.ini  main.py  pyproject.toml  scratch_test_decision.py  scratch_test_exec.py  test_integration.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_conversations.py  003_documents.py  004_plugins.py  005_obsidian.py  006_missions.py  008_knowledge.py  (+12 more)
apps/api/core/: config.py  database.py  dependencies.py  health.py
apps/api/kernel/: cognitive_loop.py  runtime.py
apps/api/models/: __init__.py  briefing.py  conversation.py  document.py  execution.py  inbox.py  integration.py  knowledge.py  memory.py  mission.py  obsidian.py  scheduler.py  workspace.py  workspace_plugin.py  workspace_session.py
apps/api/routers/: admin.py  artifacts.py  briefings.py  conversations.py  dashboard.py  documents.py  inbox.py  integrations.py  knowledge.py  memories.py  missions.py  oauth.py  observability.py  obsidian.py  orchestrator.py  plugins.py  runtime.py  scheduler.py  search.py  webhooks.py  workspaces.py
apps/api/schemas/: briefing.py  conversation.py  dashboard.py  document.py  events.py  inbox.py  integration.py  memory.py  mission.py  obsidian.py  orchestrator.py  plugin.py  runtime.py  scheduler.py  search.py  workspace.py
apps/api/scripts/: enable_docker_integration.py
apps/api/tests/: conftest.py  test_agents.py  test_plugins.py  test_rag.py  test_rc15_capability_enforcement.py  test_rc16_corrections.py
(+249 files in other folders)
